Bug 427824 - Tilde (~) expansion no longer works
Summary: Tilde (~) expansion no longer works
Status: RESOLVED FIXED
Alias: None
Product: krunner
Classification: Plasma
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Alexander Lohnau
URL:
Keywords:
: 428042 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-10-16 18:47 UTC by Samuel Gilbert
Modified: 2020-10-21 07:02 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.20.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Samuel Gilbert 2020-10-16 18:47:47 UTC
SUMMARY

I used to be able to launch programs with krunner by providing a path using tilde (~).  This no longer works with version 5.75.0

STEPS TO REPRODUCE
1. ALT-F2 or other shortcut to launch krunner
2. Enter a path to an executable file with a tilde (i.e: ~/Build/clementine-player/build/clementine)
3. Hit ENTER

OBSERVED RESULT
Nothing happens.

EXPECTED RESULT
The executable file is launched and the krunner window disappears.

SOFTWARE/OS VERSIONS
KDE Plasma Version: 5.20.0
KDE Frameworks Version: 5.75.0
Qt Version: 5.15.1

ADDITIONAL INFORMATION
It works if an explicit path without a tilde is provided.  For example, /home/someuser/somebin would work if it was actually a valid path.
Comment 1 Michal Ziabkowski 2020-10-20 14:42:59 UTC
Experiencing the same bug here. But I think it's actually in Plasma 5.20, not the krunner framework itself.

I actually use a command with a tilde daily and it only broke for me the day after I'd upgraded to Plasma 5.20. I've had krunner 5.75.0 installed for a few days more before that with no issues.

Operating System: Gentoo Linux
KDE Plasma Version: 5.20.0
KDE Frameworks Version: 5.75.0
Qt Version: 5.15.1
Comment 2 Bug Janitor Service 2020-10-20 17:14:51 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/375
Comment 3 Alexander Lohnau 2020-10-20 17:40:42 UTC
Git commit 5133d545bb5465037709e7fad8b8ad3f1cc8e852 by Alexander Lohnau.
Committed on 20/10/2020 at 17:13.
Pushed by alex into branch 'master'.

Fix tile expansion in ShellRunner
FIXED-IN: 5.20.2

M  +1    -1    runners/shell/shellrunner.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/5133d545bb5465037709e7fad8b8ad3f1cc8e852
Comment 4 Alexander Lohnau 2020-10-20 17:56:10 UTC
Git commit 23b25e7e52337c46c828f933a0e7d13107f1a65f by Alexander Lohnau.
Committed on 20/10/2020 at 17:55.
Pushed by alex into branch 'Plasma/5.20'.

Fix tile expansion in ShellRunner
FIXED-IN: 5.20.2

M  +1    -1    runners/shell/shellrunner.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/23b25e7e52337c46c828f933a0e7d13107f1a65f
Comment 5 Alexander Lohnau 2020-10-21 07:02:04 UTC
*** Bug 428042 has been marked as a duplicate of this bug. ***