Fix tile expansion in ShellRunner

BUG: 427824
FIXED-IN: 5.20.2